# nmon

./: .gitignore  .nmon_state.json  InitialPrompt.md  README.md  TechStack.md  aidercommands.md  config.toml  nmonInstructions.md  nmon_prompt.md  pyproject.toml  run_aider.md  run_aider.py
.claude/: settings.local.json
LocalLLMCoding/: LLMWorkflow.md  nmonArchitecture.md  run_aider.py
src/nmon/: __main__.py  collector.py  config.py  models.py  ollama.py  state.py  storage.py
src/nmon/gpu/: base.py  nvapi.py  nvml_source.py  smi_source.py
src/nmon/tui/: app.py  dashboard.py  history.py  llm.py  widgets.py
tests/: conftest.py  test_collector.py  test_config.py  test_gpu_nvml.py  test_gpu_smi.py  test_integration.py  test_models.py  test_storage.py  test_tui_dashboard.py  test_tui_history.py  test_tui_widgets.py
tests/fixtures/: smi_1gpu.xml  smi_2gpu.xml
