[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nmon"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7",
    "pynvml>=11.5.0",
    "readchar>=4.0.5",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "coverage>=7.4",
]

[project.scripts]
nmon = "nmon.__main__:main"
